--- a/GroupPages/Grupo_32.html
+++ b/GroupPages/Grupo_32.html
@@ -1,10 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Ciencia, Tecnologia e a Cidade</title>
 	<meta charset="utf-8" />
 </head>
 <body>
-
+<center>
+        <h1>Grupo 32</h1>
+    </center>
 </body>
 </html>
