--- a/MainPage.html
+++ b/MainPage.html
@@ -23,6 +23,11 @@
                 <p>Text</p>
             </td>
         </tr>
+        <tr>
+            <ul class="a">
+                <li><a href="GroupPages/Grupo_1.html" class="GroupLink">Groupo 1</a></li>
+            </ul>
+        </tr>
     </table>
 </body>
 </html>
