--- a/MainPage.html
+++ b/MainPage.html
@@ -32,6 +32,28 @@
                     <li><a href="GroupPages/Grupo_17.html" class="GroupLink">Groupo 17</a></li>
                     <li><a href="GroupPages/Grupo_18.html" class="GroupLink">Groupo 18</a></li>
                     <li><a href="GroupPages/Grupo_19.html" class="GroupLink">Groupo 19</a></li>
+                    <li><a href="GroupPages/Grupo_20.html" class="GroupLink">Groupo 20</a></li>
+                    <li><a href="GroupPages/Grupo_21.html" class="GroupLink">Groupo 21</a></li>
+                    <li><a href="GroupPages/Grupo_22.html" class="GroupLink">Groupo 22</a></li>
+                    <li><a href="GroupPages/Grupo_23.html" class="GroupLink">Groupo 23</a></li>
+                    <li><a href="GroupPages/Grupo_24.html" class="GroupLink">Groupo 24</a></li>
+                    <li><a href="GroupPages/Grupo_25.html" class="GroupLink">Groupo 25</a></li>
+                    <li><a href="GroupPages/Grupo_26.html" class="GroupLink">Groupo 26</a></li>
+                    <li><a href="GroupPages/Grupo_27.html" class="GroupLink">Groupo 27</a></li>
+                    <li><a href="GroupPages/Grupo_28.html" class="GroupLink">Groupo 28</a></li>
+                    <li><a href="GroupPages/Grupo_29.html" class="GroupLink">Groupo 29</a></li>
+                    <li><a href="GroupPages/Grupo_30.html" class="GroupLink">Groupo 30</a></li>
+                    <li><a href="GroupPages/Grupo_31.html" class="GroupLink">Groupo 31</a></li>
+                    <li><a href="GroupPages/Grupo_32.html" class="GroupLink">Groupo 32</a></li>
+                    <li><a href="GroupPages/Grupo_33.html" class="GroupLink">Groupo 33</a></li>
+                    <li><a href="GroupPages/Grupo_34.html" class="GroupLink">Groupo 34</a></li>
+                    <li><a href="GroupPages/Grupo_35.html" class="GroupLink">Groupo 35</a></li>
+                    <li><a href="GroupPages/Grupo_36.html" class="GroupLink">Groupo 36</a></li>
+                    <li><a href="GroupPages/Grupo_37.html" class="GroupLink">Groupo 37</a></li>
+                    <li><a href="GroupPages/Grupo_38.html" class="GroupLink">Groupo 38</a></li>
+                    <li><a href="GroupPages/Grupo_39.html" class="GroupLink">Groupo 39</a></li>
+                    <li><a href="GroupPages/Grupo_40.html" class="GroupLink">Groupo 40</a></li>
+
                 </ul>
             </td>
             <td id="mainbody">
