--- a/MainPage.html
+++ b/MainPage.html
@@ -13,57 +13,52 @@
         <tr>
             <td id="sidebar">
                 <ul class="a">
-                    <li><a href="GroupPages/Grupo_01.html" class="GroupLink">Groupo 1</a></li>
-                    <li><a href="GroupPages/Grupo_02.html" class="GroupLink">Groupo 2</a></li>
-                    <li><a href="GroupPages/Grupo_03.html" class="GroupLink">Groupo 3</a></li>
-                    <li><a href="GroupPages/Grupo_04.html" class="GroupLink">Groupo 4</a></li>
-                    <li><a href="GroupPages/Grupo_05.html" class="GroupLink">Groupo 5</a></li>
-                    <li><a href="GroupPages/Grupo_06.html" class="GroupLink">Groupo 6</a></li>
-                    <li><a href="GroupPages/Grupo_07.html" class="GroupLink">Groupo 7</a></li>
-                    <li><a href="GroupPages/Grupo_08.html" class="GroupLink">Groupo 8</a></li>
-                    <li><a href="GroupPages/Grupo_09.html" class="GroupLink">Groupo 9</a></li>
-                    <li><a href="GroupPages/Grupo_10.html" class="GroupLink">Groupo 10</a></li>
-                    <li><a href="GroupPages/Grupo_11.html" class="GroupLink">Groupo 11</a></li>
-                    <li><a href="GroupPages/Grupo_12.html" class="GroupLink">Groupo 12</a></li>
-                    <li><a href="GroupPages/Grupo_13.html" class="GroupLink">Groupo 13</a></li>
-                    <li><a href="GroupPages/Grupo_14.html" class="GroupLink">Groupo 14</a></li>
-                    <li><a href="GroupPages/Grupo_15.html" class="GroupLink">Groupo 15</a></li>
-                    <li><a href="GroupPages/Grupo_16.html" class="GroupLink">Groupo 16</a></li>
-                    <li><a href="GroupPages/Grupo_17.html" class="GroupLink">Groupo 17</a></li>
-                    <li><a href="GroupPages/Grupo_18.html" class="GroupLink">Groupo 18</a></li>
-                    <li><a href="GroupPages/Grupo_19.html" class="GroupLink">Groupo 19</a></li>
-                    <li><a href="GroupPages/Grupo_20.html" class="GroupLink">Groupo 20</a></li>
-                    <li><a href="GroupPages/Grupo_21.html" class="GroupLink">Groupo 21</a></li>
-                    <li><a href="GroupPages/Grupo_22.html" class="GroupLink">Groupo 22</a></li>
-                    <li><a href="GroupPages/Grupo_23.html" class="GroupLink">Groupo 23</a></li>
-                    <li><a href="GroupPages/Grupo_24.html" class="GroupLink">Groupo 24</a></li>
-                    <li><a href="GroupPages/Grupo_25.html" class="GroupLink">Groupo 25</a></li>
-                    <li><a href="GroupPages/Grupo_26.html" class="GroupLink">Groupo 26</a></li>
-                    <li><a href="GroupPages/Grupo_27.html" class="GroupLink">Groupo 27</a></li>
-                    <li><a href="GroupPages/Grupo_28.html" class="GroupLink">Groupo 28</a></li>
-                    <li><a href="GroupPages/Grupo_29.html" class="GroupLink">Groupo 29</a></li>
-                    <li><a href="GroupPages/Grupo_30.html" class="GroupLink">Groupo 30</a></li>
-                    <li><a href="GroupPages/Grupo_31.html" class="GroupLink">Groupo 31</a></li>
-                    <li><a href="GroupPages/Grupo_32.html" class="GroupLink">Groupo 32</a></li>
-                    <li><a href="GroupPages/Grupo_33.html" class="GroupLink">Groupo 33</a></li>
-                    <li><a href="GroupPages/Grupo_34.html" class="GroupLink">Groupo 34</a></li>
-                    <li><a href="GroupPages/Grupo_35.html" class="GroupLink">Groupo 35</a></li>
-                    <li><a href="GroupPages/Grupo_36.html" class="GroupLink">Groupo 36</a></li>
-                    <li><a href="GroupPages/Grupo_37.html" class="GroupLink">Groupo 37</a></li>
-                    <li><a href="GroupPages/Grupo_38.html" class="GroupLink">Groupo 38</a></li>
-                    <li><a href="GroupPages/Grupo_39.html" class="GroupLink">Groupo 39</a></li>
-                    <li><a href="GroupPages/Grupo_40.html" class="GroupLink">Groupo 40</a></li>
+                    <li><a href="GroupPages/Grupo_01.html" class="GroupLink">Grupo 1</a></li>
+                    <li><a href="GroupPages/Grupo_02.html" class="GroupLink">Grupo 2</a></li>
+                    <li><a href="GroupPages/Grupo_03.html" class="GroupLink">Grupo 3</a></li>
+                    <li><a href="GroupPages/Grupo_04.html" class="GroupLink">Grupo 4</a></li>
+                    <li><a href="GroupPages/Grupo_05.html" class="GroupLink">Grupo 5</a></li>
+                    <li><a href="GroupPages/Grupo_06.html" class="GroupLink">Grupo 6</a></li>
+                    <li><a href="GroupPages/Grupo_07.html" class="GroupLink">Grupo 7</a></li>
+                    <li><a href="GroupPages/Grupo_08.html" class="GroupLink">Grupo 8</a></li>
+                    <li><a href="GroupPages/Grupo_09.html" class="GroupLink">Grupo 9</a></li>
+                    <li><a href="GroupPages/Grupo_10.html" class="GroupLink">Grupo 10</a></li>
+                    <li><a href="GroupPages/Grupo_11.html" class="GroupLink">Grupo 11</a></li>
+                    <li><a href="GroupPages/Grupo_12.html" class="GroupLink">Grupo 12</a></li>
+                    <li><a href="GroupPages/Grupo_13.html" class="GroupLink">Grupo 13</a></li>
+                    <li><a href="GroupPages/Grupo_14.html" class="GroupLink">Grupo 14</a></li>
+                    <li><a href="GroupPages/Grupo_15.html" class="GroupLink">Grupo 15</a></li>
+                    <li><a href="GroupPages/Grupo_16.html" class="GroupLink">Grupo 16</a></li>
+                    <li><a href="GroupPages/Grupo_17.html" class="GroupLink">Grupo 17</a></li>
+                    <li><a href="GroupPages/Grupo_18.html" class="GroupLink">Grupo 18</a></li>
+                    <li><a href="GroupPages/Grupo_19.html" class="GroupLink">Grupo 19</a></li>
+                    <li><a href="GroupPages/Grupo_20.html" class="GroupLink">Grupo 20</a></li>
+                    <li><a href="GroupPages/Grupo_21.html" class="GroupLink">Grupo 21</a></li>
+                    <li><a href="GroupPages/Grupo_22.html" class="GroupLink">Grupo 22</a></li>
+                    <li><a href="GroupPages/Grupo_23.html" class="GroupLink">Grupo 23</a></li>
+                    <li><a href="GroupPages/Grupo_24.html" class="GroupLink">Grupo 24</a></li>
+                    <li><a href="GroupPages/Grupo_25.html" class="GroupLink">Grupo 25</a></li>
+                    <li><a href="GroupPages/Grupo_26.html" class="GroupLink">Grupo 26</a></li>
+                    <li><a href="GroupPages/Grupo_27.html" class="GroupLink">Grupo 27</a></li>
+                    <li><a href="GroupPages/Grupo_28.html" class="GroupLink">Grupo 28</a></li>
+                    <li><a href="GroupPages/Grupo_29.html" class="GroupLink">Grupo 29</a></li>
+                    <li><a href="GroupPages/Grupo_30.html" class="GroupLink">Grupo 30</a></li>
+                    <li><a href="GroupPages/Grupo_31.html" class="GroupLink">Grupo 31</a></li>
+                    <li><a href="GroupPages/Grupo_32.html" class="GroupLink">Grupo 32</a></li>
+                    <li><a href="GroupPages/Grupo_33.html" class="GroupLink">Grupo 33</a></li>
+                    <li><a href="GroupPages/Grupo_34.html" class="GroupLink">Grupo 34</a></li>
+                    <li><a href="GroupPages/Grupo_35.html" class="GroupLink">Grupo 35</a></li>
+                    <li><a href="GroupPages/Grupo_36.html" class="GroupLink">Grupo 36</a></li>
+                    <li><a href="GroupPages/Grupo_37.html" class="GroupLink">Grupo 37</a></li>
+                    <li><a href="GroupPages/Grupo_38.html" class="GroupLink">Grupo 38</a></li>
+                    <li><a href="GroupPages/Grupo_39.html" class="GroupLink">Grupo 39</a></li>
+                    <li><a href="GroupPages/Grupo_40.html" class="GroupLink">Grupo 40</a></li>
 
                 </ul>
             </td>
             <td id="mainbody">
                 <p>Text</p>
             </td>
-        </tr>
-        <tr>
-            <ul class="a">
-                <li><a href="GroupPages/Grupo_1.html" class="GroupLink">Groupo 1</a></li>
-            </ul>
         </tr>
     </table>
 </body>
