--- a/GroupPages/Grupo_02.html
+++ b/GroupPages/Grupo_02.html
@@ -3,10 +3,61 @@
 <head>
     <title>Ciencia, Tecnologia e a Cidade</title>
 	<meta charset="utf-8" />
+	<link href="../StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
  <center>
         <h1>Grupo 2</h1>
     </center>
+	<table>
+        <tr>
+            <td id="sidebar">
+                <ul class="a">
+					<li><a href="../MainPage.html" class="GroupLink">Página Principal</a></li>               
+					<li><a href="Grupo_01.html" class="GroupLink">Grupo 1</a></li>
+                    <li>Grupo 2</li>
+                    <li><a href="Grupo_03.html" class="GroupLink">Grupo 3</a></li>
+                    <li><a href="Grupo_04.html" class="GroupLink">Grupo 4</a></li>
+                    <li><a href="Grupo_05.html" class="GroupLink">Grupo 5</a></li>
+                    <li><a href="Grupo_06.html" class="GroupLink">Grupo 6</a></li>
+                    <li><a href="Grupo_07.html" class="GroupLink">Grupo 7</a></li>
+                    <li><a href="Grupo_08.html" class="GroupLink">Grupo 8</a></li>
+                    <li><a href="Grupo_09.html" class="GroupLink">Grupo 9</a></li>
+                    <li><a href="Grupo_10.html" class="GroupLink">Grupo 10</a></li>
+                    <li><a href="Grupo_11.html" class="GroupLink">Grupo 11</a></li>
+                    <li><a href="Grupo_12.html" class="GroupLink">Grupo 12</a></li>
+                    <li><a href="Grupo_13.html" class="GroupLink">Grupo 13</a></li>
+                    <li><a href="Grupo_14.html" class="GroupLink">Grupo 14</a></li>
+                    <li><a href="Grupo_15.html" class="GroupLink">Grupo 15</a></li>
+                    <li><a href="Grupo_16.html" class="GroupLink">Grupo 16</a></li>
+                    <li><a href="Grupo_17.html" class="GroupLink">Grupo 17</a></li>
+                    <li><a href="Grupo_18.html" class="GroupLink">Grupo 18</a></li>
+                    <li><a href="Grupo_19.html" class="GroupLink">Grupo 19</a></li>
+                    <li><a href="Grupo_20.html" class="GroupLink">Grupo 20</a></li>
+                    <li><a href="Grupo_21.html" class="GroupLink">Grupo 21</a></li>
+                    <li><a href="Grupo_22.html" class="GroupLink">Grupo 22</a></li>
+                    <li><a href="Grupo_23.html" class="GroupLink">Grupo 23</a></li>
+                    <li><a href="Grupo_24.html" class="GroupLink">Grupo 24</a></li>
+                    <li><a href="Grupo_25.html" class="GroupLink">Grupo 25</a></li>
+                    <li><a href="Grupo_26.html" class="GroupLink">Grupo 26</a></li>
+                    <li><a href="Grupo_27.html" class="GroupLink">Grupo 27</a></li>
+                    <li><a href="Grupo_28.html" class="GroupLink">Grupo 28</a></li>
+                    <li><a href="Grupo_29.html" class="GroupLink">Grupo 29</a></li>
+                    <li><a href="Grupo_30.html" class="GroupLink">Grupo 30</a></li>
+                    <li><a href="Grupo_31.html" class="GroupLink">Grupo 31</a></li>
+                    <li><a href="Grupo_32.html" class="GroupLink">Grupo 32</a></li>
+                    <li><a href="Grupo_33.html" class="GroupLink">Grupo 33</a></li>
+                    <li><a href="Grupo_34.html" class="GroupLink">Grupo 34</a></li>
+                    <li><a href="Grupo_35.html" class="GroupLink">Grupo 35</a></li>
+                    <li><a href="Grupo_36.html" class="GroupLink">Grupo 36</a></li>
+                    <li><a href="Grupo_37.html" class="GroupLink">Grupo 37</a></li>
+                    <li><a href="Grupo_38.html" class="GroupLink">Grupo 38</a></li>
+                    <li><a href="Grupo_39.html" class="GroupLink">Grupo 39</a></li>
+                    <li><a href="Grupo_40.html" class="GroupLink">Grupo 40</a></li>
+
+                </ul>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
